# chatroom

./: .gitignore  README.md  app.py  factory.py  gunicorn.conf.py  main.py  pyproject.toml  requirements.txt  settings.py
apps/chat/: __init__.py  socket.py  views.py
static/css/: chat.css  retro_chat.css  style_index.css
static/js/chat/: livingroom.js  normal_chat.js  retro_chat.js
templates/: index.html
templates/base/: base.html
templates/chat/: chatroom.html  normal_chat.html  retro_chat.html
