[project]
name = "chat"
version = "0.1.0"
description = "Aplicación de salas de chat"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bidict==0.23.1",
    "blinker==1.8.2",
    "cachelib==0.9.0",
    "click==8.1.7",
    "dnspython==2.7.0",
    "eventlet==0.40.4",
    "flask==3.0.3",
    "flask-caching==2.3.0",
    "flask-cors==5.0.0",
    "flask-socketio==5.4.0",
    "gevent==25.9.1",
    "greenlet==3.3.1",
    "gunicorn==25.1.0",
    "h11==0.14.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "markupsafe==2.1.5",
    "packaging==24.2",
    "python-dotenv==1.2.1",
    "python-engineio==4.9.1",
    "python-socketio==5.11.4",
    "simple-websocket==1.0.0",
    "uvloop==0.22.1",
    "werkzeug==3.0.4",
    "wsproto==1.2.0",
    "zope-event==5.0",
    "zope-interface==7.1.1",
]
